src/test/resources/de/monticore/umlcd4a/cocos/ebnf/invalid/C4A07.cd
package de.monticore.umlcd4a.cocos.ebnf.invalid;

classdiagram C4A07 {
  class C extends C2;
  class C2 extends C;
  interface I extends I2;
  interface I2 extends I;
}